--- a/pom.xml
+++ b/pom.xml
@@ -25,21 +25,17 @@
                     </archive>
                 </configuration>
             </plugin>
-        </plugins>
-    </build>
-
-   <!-- <build>
-        <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
+                    <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
         </plugins>
-    </build>-->
+    </build>
 
     <dependencies>
         <dependency>
@@ -65,6 +61,12 @@
             <groupId>com.sun.mail</groupId>
             <artifactId>smtp</artifactId>
             <version>1.4.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
         </dependency>
 
 
