--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,12 @@
             <version>4.12</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+
 
     </dependencies>
 </project>
