--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,12 @@
             <version>2.3.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.8.3</version>
+        </dependency>
+
 
     </dependencies>
 </project>
