--- a/pom.xml
+++ b/pom.xml
@@ -4,32 +4,21 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>Parser</groupId>
-    <artifactId>parser</artifactId>
+    <groupId>javaFX_parser</groupId>
+    <artifactId>javaFX_parser</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <build>
         <plugins>
+
             <plugin>
-                <artifactId>maven-assembly-plugin</artifactId>
+                <groupId>com.zenjava</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>2.0</version>
                 <configuration>
-                    <descriptorRefs>
-                        <descriptorRef>jar-with-dependencies</descriptorRef>
-                    </descriptorRefs>
-                    <finalName>parser</finalName>
-                    <appendAssemblyId>false</appendAssemblyId>
-                    <archive>
-                        <manifest>
-                            <mainClass>Start</mainClass>//указать класс main
-                        </manifest>
-                    </archive>
+                    <mainClass>MainApp</mainClass>
                 </configuration>
             </plugin>
-        </plugins>
-    </build>
-
-   <!-- <build>
-        <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -38,8 +27,9 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
+
         </plugins>
-    </build>-->
+    </build>
 
     <dependencies>
         <dependency>
@@ -69,4 +59,5 @@
 
 
     </dependencies>
+
 </project>
