--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,4 +1,4 @@
-#Mon Apr 11 18:11:22 MSK 2016
-smtpHost=smtp.mail.ru
-login=vadim0872
-addressFrom=vadim0872@mail.ru
+#Sat Apr 16 06:10:18 MSK 2016
+smtpHost=smtp.rambler.ru
+login=undegraund2
+addressFrom=undegraund2@rambler.ru
